--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt": {
+    "Issuer": "https://joydipkanjilal.com/",
+    "Audience": "https://joydipkanjilal.com/",
+    "Key": "This is a sample secret key - please don't use in production environment.'"
+  },
   "ConnectionStrings": {
     "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
   },
