changed connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,7 @@
     "Key": "This is a sample secret key - please don't use in production environment.'"
   },
   "ConnectionStrings": {
-    "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
+    "UnifyDbContext": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
