--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,9 +7,9 @@
     }
   },
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
-    "Key": "This is a sample secret key - please don't use in production environment.'"
+    "Issuer": "https://api.cropkeeper.com",
+    "Audience": "https://localhost:7129",
+    "Key": "g3g598ncur32unr02vubotvjhinosvfumc4o"
   },
   "ConnectionStrings": {
     "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
