--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,7 @@
     "Key": "g3g598ncur32unr02vubotvjhinosvfumc4o"
   },
   "ConnectionStrings": {
-    "UnifyDbContext": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
