updated appsettings for deployment

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,12 @@
     }
   },
   "Jwt": {
-    "Issuer": "https://api.cropkeeper.com",
-    "Audience": "https://localhost:7129",
+    "Issuer": "https://cropkeeper.azurewebsites.net/",
+    "Audience": "https://agreeable-bay-0bf0f9d10.4.azurestaticapps.net/",
     "Key": "g3g598ncur32unr02vubotvjhinosvfumc4o"
   },
   "ConnectionStrings": {
-    "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
+    "CropKeeperDbContext": "Server=tcp:dudesinc.database.windows.net,1433;Initial Catalog=cropkeeper-db;Persist Security Info=False;User ID=dudesincadmin;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
