--- a/.github/workflows/main_cropkeeper.yml
+++ b/.github/workflows/main_cropkeeper.yml
@@ -21,12 +21,18 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
-
+        
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+      - name: dotnet install ef
+        run: dotnet tool install -g dotnet-ef --version 6.0.0
+
+      - name: dotnet bundle migration
+        run: dotnet ef migrations bundle --runtime linux-x64 -p CropKeeperApi/CropKeeperApi.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
