--- a/.github/workflows/main_cropkeeper.yml
+++ b/.github/workflows/main_cropkeeper.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install -g dotnet-ef --version 7.0.3
 
       - name: dotnet bundle migration
-        run: dotnet ef migrations bundle --runtime linux-x64 -p CropKeeperApi.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate --self-contained
+        run: dotnet ef migrations bundle -p CropKeeperApi.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate --self-contained
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
