--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
     "Key": "g3g598ncur32unr02vubotvjhinosvfumc4o"
   },
   "ConnectionStrings": {
-    "CropKeeperDbContext": "Server=tcp:dudesinc.database.windows.net,1433;Initial Catalog=cropkeeper-db;Persist Security Info=False;User ID=dudesincadmin;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CropKeeperDbContext": "Server=DESKTOP-UDM83EI\\SQLEXPRESS;Database=CropKeeper;User Id=cropkeeper;Password=password;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
